fix(user): adjust blog post spacing

--- a/apps/user/app/page.module.css
+++ b/apps/user/app/page.module.css
@@ -617,6 +617,10 @@
   mask-composite: exclude;
 }
 
+.blogInner {
+  gap: 52px;
+}
+
 .blogHeadingText {
   max-width: 371px;
   display: flex;
